--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,5 @@
+name: Deploy to EC2
+
 on:
   push:
     branches:
@@ -8,44 +10,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Setup SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
-        # Write clean SSH config (NO extra spaces)
-        cat > ~/.ssh/config <<EOF
+          cat > ~/.ssh/config << 'EOC'
 Host ec2
   HostName ${{ secrets.EC2_HOST }}
   User ${{ secrets.EC2_USER }}
   IdentityFile ~/.ssh/id_rsa
   StrictHostKeyChecking no
-EOF
+EOC
 
-    - name: Copy project to EC2
-      run: |
-        ssh ec2 "rm -rf ~/deploy/* || true"
-        scp -r . ec2:~/deploy/
+      - name: Copy project to EC2
+        run: |
+          ssh ec2 "rm -rf ~/deploy/* || true"
+          scp -r . ec2:~/deploy/
 
-    - name: Build & Restart Docker Container on EC2
-      run: |
-        ssh ec2 << 'EOF'
-          cd ~/deploy
+      - name: Build & Restart Docker Container on EC2
+        run: |
+          ssh ec2 << 'EOD'
+            cd ~/deploy
+            docker stop agent-kit || true
+            docker rm agent-kit || true
+            docker build -t agent-kit .
+            docker run -d --name agent-kit -p 8501:8501 agent-kit
+EOD
 
-          echo "Stopping old container..."
-          docker stop agent-kit || true
-          docker rm agent-kit || true
-
-          echo "Building new Docker image..."
-          docker build -t agent-kit .
-
-          echo "Running new container..."
-          docker run -d --name agent-kit -p 8501:8501 agent-kit
-EOF
-
-    - name: Deployment Complete
-      run: echo "🎉 Deployment finished successfully!"
+      - name: Deployment Complete
+        run: echo "🎉 Deployment finished successfully!"
