Fix YAML formatting

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,7 @@ name: Deploy to EC2
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   deploy:
@@ -13,34 +12,35 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup SSH
+      - name: Configure SSH
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-          cat > ~/.ssh/config << 'EOC'
+          cat > ~/.ssh/config << 'EOF'
 Host ec2
   HostName ${{ secrets.EC2_HOST }}
   User ${{ secrets.EC2_USER }}
   IdentityFile ~/.ssh/id_rsa
   StrictHostKeyChecking no
-EOC
+EOF
 
-      - name: Copy project to EC2
+      - name: Upload project to EC2
         run: |
-          ssh ec2 "rm -rf ~/deploy/* || true"
+          ssh ec2 "rm -rf ~/deploy || true && mkdir -p ~/deploy"
           scp -r . ec2:~/deploy/
 
-      - name: Build & Restart Docker Container on EC2
+      - name: Build & Restart Docker container
         run: |
-          ssh ec2 << 'EOD'
+          ssh ec2 << 'EOF'
             cd ~/deploy
             docker stop agent-kit || true
             docker rm agent-kit || true
+            
             docker build -t agent-kit .
             docker run -d --name agent-kit -p 8501:8501 agent-kit
-EOD
+EOF
 
       - name: Deployment Complete
         run: echo "🎉 Deployment finished successfully!"
