--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,17 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Checkout Source Code
         uses: actions/checkout@v3
 
       - name: Setup SSH
+        shell: bash
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-          cat > ~/.ssh/config <<EOF
+          cat > ~/.ssh/config <<'EOF'
 Host ec2
   HostName ${{ secrets.EC2_HOST }}
   User ${{ secrets.EC2_USER }}
@@ -29,19 +29,18 @@ Host ec2
 EOF
 
       - name: Upload Project Files to EC2
+        shell: bash
         run: |
           rsync -avz --delete --exclude 'venv' ./ ec2:~/deploy/
 
       - name: Build & Restart Docker Container on EC2
+        shell: bash
         run: |
           ssh ec2 << 'EOF'
             cd ~/deploy
-
             docker stop agent-kit || true
             docker rm agent-kit || true
-
             docker build -t agent-kit .
-
             docker run -d --name agent-kit -p 8501:8501 agent-kit
 EOF
 
