--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Source Code
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Setup SSH
@@ -18,28 +17,17 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+          echo "Host ${{ secrets.EC2_HOST }}" >> ~/.ssh/config
+          echo "  User ${{ secrets.EC2_USER }}" >> ~/.ssh/config
+          echo "  StrictHostKeyChecking no" >> ~/.ssh/config
 
-          cat > ~/.ssh/config << 'EOF'
-Host ec2
-  HostName ${{ secrets.EC2_HOST }}
-  User ${{ secrets.EC2_USER }}
-  IdentityFile ~/.ssh/id_rsa
-  StrictHostKeyChecking no
-EOF
-
-      - name: Upload Project Files to EC2
+      - name: Deploy to EC2
         run: |
-          rsync -avz --delete --exclude 'venv' ./ ec2:~/deploy/
-
-      - name: Build & Restart Docker Container on EC2
-        run: |
-          ssh ec2 << 'EOF'
+          scp -r ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/deploy/
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
             cd ~/deploy
             docker stop agent-kit || true
-            docker rm agent-kit || true
+            docker rm agent-kit || true  
             docker build -t agent-kit .
             docker run -d --name agent-kit -p 8501:8501 agent-kit
-EOF
-
-      - name: Deployment Complete
-        run: echo "🚀 Deployment successful!"
+          "
