Refactor EC2 deployment steps in workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,29 +19,18 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          
-          cat > ~/.ssh/config << 'EOF'
-Host ec2
-  HostName ${{ secrets.EC2_HOST }}
-  User ${{ secrets.EC2_USER }}
-  IdentityFile ~/.ssh/id_rsa
-  StrictHostKeyChecking no
-EOF
-          chmod 600 ~/.ssh/config
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Test Connection
-        run: ssh -o ConnectTimeout=10 ec2 "echo 'Connected successfully!'"
-
-      - name: Deploy Files
-        run: rsync -avz --exclude 'venv' ./ ec2:~/deploy/
-
-      - name: Build and Deploy Container
+      - name: Deploy to EC2
         run: |
-          ssh ec2 "cd ~/deploy && \
-          docker stop agent-kit || true && \
-          docker rm agent-kit || true && \
-          docker build -t agent-kit . && \
-          docker run -d --name agent-kit -p 8501:8501 agent-kit"
+          # Copy files using scp
+          scp -r ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/deploy/
+          
+          # Run deployment commands
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd ~/deploy && docker stop agent-kit || true"
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd ~/deploy && docker rm agent-kit || true"
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd ~/deploy && docker build -t agent-kit ."
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd ~/deploy && docker run -d --name agent-kit -p 8501:8501 agent-kit"
 
       - name: Success
         run: echo "🚀 Deployment completed!"
