--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,20 +14,33 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Setup SSH in Workspace
+      - name: Check Current Directory
         run: |
-          mkdir -p ./ssh_temp
-          echo "${{ secrets.EC2_SSH_KEY }}" > ./ssh_temp/id_rsa
-          chmod 600 ./ssh_temp/id_rsa
-          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ./ssh_temp/known_hosts
+          echo "Current directory: $(pwd)"
+          echo "Home directory: $HOME"
+          whoami
+          ls -la
 
-      - name: Deploy using Temp Key
+      - name: Try Creating SSH Directory
         run: |
-          scp -r -i ./ssh_temp/id_rsa ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/deploy/
-          ssh -i ./ssh_temp/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd ~/deploy && docker stop agent-kit || true"
-          ssh -i ./ssh_temp/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd ~/deploy && docker rm agent-kit || true"
-          ssh -i ./ssh_temp/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd ~/deploy && docker build -t agent-kit ."
-          ssh -i ./ssh_temp/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd ~/deploy && docker run -d --name agent-kit -p 8501:8501 agent-kit"
+          echo "Attempting to create SSH directory..."
+          mkdir -v -p ~/.ssh
+          echo "Exit code: $?"
+          ls -la ~/
+
+      - name: Continue if successful
+        if: success()
+        run: |
+          echo "SSH directory created successfully!"
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Deploy
+        if: success()
+        run: |
+          scp -r ./ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/deploy/
+          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd ~/deploy && docker stop agent-kit || true; docker rm agent-kit || true; docker build -t agent-kit .; docker run -d --name agent-kit -p 8501:8501 agent-kit"
 
       - name: Success
         run: echo "🚀 Deployment completed!"
